# Pytorch-Android-Mobile-Application

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LESSONS_LEARNED.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
HelloWorldApp/: local.properties
HelloWorldApp/app/src/main/: AndroidManifest.xml
HelloWorldApp/app/src/main/java/org/pytorch/helloworld/: MainActivity.java
HelloWorldApp/app/src/main/res/layout/: activity_main.xml
HelloWorldApp/gradle/wrapper/: gradle-wrapper.properties
docs/: API.md  ARCHITECTURE.md
python/: README.md
python/scripts/: export_example.sh  quick_export.sh  train_example.sh
python/src/pytorch_mobile/: __init__.py  export.py  train.py  validate.py
python/tests/: __init__.py  conftest.py  test_export.py  test_train.py  test_validate.py
