[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-mobile-trainer"
version = "1.0.0"
description = "PyTorch Mobile model training and export toolkit for Android deployment"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ümit Kacar", email = "umitkacar@users.noreply.github.com"},
]
keywords = [
    "pytorch",
    "mobile",
    "android",
    "deep-learning",
    "computer-vision",
    "model-training",
    "torchscript",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "coverage[toml]>=7.3.0",
    "ipython>=8.14.0",
    "ipdb>=0.13.13",
]
training = [
    "tensorboard>=2.14.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = [
    "pytorch-mobile-trainer[dev,training]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/Pytorch-Android-Mobile-Application"
Documentation = "https://github.com/umitkacar/Pytorch-Android-Mobile-Application/tree/main/docs"
Repository = "https://github.com/umitkacar/Pytorch-Android-Mobile-Application"
Issues = "https://github.com/umitkacar/Pytorch-Android-Mobile-Application/issues"

[project.scripts]
train-model = "pytorch_mobile.train:main"
export-model = "pytorch_mobile.export:main"
validate-model = "pytorch_mobile.validate:main"

# =============================================================================
# Hatch Configuration
# =============================================================================

[tool.hatch.version]
path = "python/src/pytorch_mobile/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/python/src",
    "/python/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["python/src/pytorch_mobile"]

[tool.hatch.build.targets.wheel.force-include]
"python/src/pytorch_mobile" = "pytorch_mobile"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:python/tests}"
test-cov = "pytest --cov=python/src/pytorch_mobile --cov-report=html --cov-report=term --cov-report=xml {args:python/tests}"
test-parallel = "pytest -n auto {args:python/tests}"
test-fast = "pytest -n auto -m 'not slow' {args:python/tests}"
lint = "ruff check {args:python/src python/tests}"
format = "black {args:python/src python/tests}"
format-check = "black --check {args:python/src python/tests}"
type-check = "mypy {args:python/src}"
security = "bandit -r python/src -c pyproject.toml"
check-all = [
    "format-check",
    "lint",
    "type-check",
    "security",
    "test-cov",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

# =============================================================================
# Ruff Configuration (Ultra-fast linter replacing flake8, isort, etc.)
# =============================================================================

[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "TRY003",  # avoid specifying long messages outside exception class
    "PLC0415", # import should be at top of file
    "T201",    # print found
    "S603",    # subprocess without shell=True
    "S607",    # partial executable path
    "G004",    # logging f-string
    "EM102",   # f-string in exception
    "EM101",   # raw string in exception
    "TRY300",  # try-consider-else
    "TRY400",  # error-instead-of-exception
    "PLW2901", # redefined-loop-name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"python/tests/**/*.py" = ["PLR2004", "S101", "TID252", "ARG001"]
"tests/**/*.py" = ["PLR2004", "S101", "TID252", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["pytorch_mobile"]
force-single-line = false
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Black Configuration (Code formatter)
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# =============================================================================
# MyPy Configuration (Type checking)
# =============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
strict_concatenate = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["python/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "-v",
    "--cov-report=term-missing",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "network: marks tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
timeout = 300
xfail_strict = true

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["pytorch_mobile"]
source_pkgs = ["pytorch_mobile"]
branch = true
parallel = true
relative_files = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "\\.\\.\\.",
]

[tool.coverage.paths]
source = ["python/src/pytorch_mobile"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Additional Tool Configurations
# =============================================================================

[tool.bandit]
exclude_dirs = ["/tests", "/build", "/dist"]
skips = [
    "B101",  # assert_used - used in tests
    "B601",  # paramiko_calls
    "B614",  # pytorch_load - safe in controlled environment
]
